# RepairAgent

./: .gitignore  README.md  pyproject.toml
repair_agent/: bugs_10_each_project.txt  config.yaml  grid_search.py  pyproject.toml  repairagent.py  requirements-core.txt  requirements.txt
repair_agent/autogpt/agents/: agent.py
repair_agent/autogpt/app/: configurator.py  main.py  spinner.py
repair_agent/autogpt/commands/: defects4j.py  defects4j_static.py
repair_agent/autogpt/config/: config.py
repair_agent/autogpt/llm/providers/: ollama_interface.py
repair_agent/autogpt/llm/providers/ollama_interface/: __init__.py  client.py  retry.py  stream.py  utils.py
repair_agent/autogpt/llm/utils/: __init__.py  token_counter.py
repair_agent/experimental_setups/: experiments_list.txt
