[project]
name = "repair-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.18.0",
    "antlr4-python3-runtime>=4.13.2",
    "auto-gpt-plugin-template",
    "beautifulsoup4>=4.12.2",
    "black>=26.3.1",
    "charset-normalizer>=3.1.0",
    "click>=8.1.8",
    "colorama==0.4.6",
    "coverage>=7.13.5",
    "distro==1.8.0",
    "docker>=7.1.0",
    "duckduckgo-search==3.0.2",
    "en-core-web-sm",
    "fastapi>=0.100.1",
    "flake8>=7.3.0",
    "ftfy>=6.1.1",
    "fuzzywuzzy>=0.18.0",
    "gitpython==3.1.31",
    "google-api-python-client>=2.196.0",
    "gtts==2.3.1",
    "inflection>=0.5.1",
    "isort>=5.13.2",
    "javalang>=0.13.0",
    "json-repair>=0.59.5",
    "jsonschema>=4.26.0",
    "langchain>=0.1.10",
    "langchain-anthropic>=0.1.0",
    "markdown>=3.10.2",
    "matplotlib>=3.10.9",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-table-reader-plugin>=3.1.0",
    "mypy>=2.0.0",
    "numpy>=1.26.4",
    "ollama",
    "openai==0.27.8",
    "openapi-python-client==0.28.3",
    "orjson==3.8.10",
    "pandas>=2.3.3",
    "pillow>=12.2.0",
    "pinecone-client==2.2.1",
    "playsound==1.2.2",
    "pre-commit>=4.6.0",
    "prettytable>=3.17.0",
    "prompt-toolkit>=3.0.38",
    "pydantic>=2.9.0",
    "pylatexenc>=2.10",
    "pymdown-extensions>=10.21.2",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "readability-lxml==0.8.1",
    "redis>=7.4.0",
    "reportlab>=4.5.0",
    "requests>=2.33.1",
    "rich>=13.0.0",
    "selenium>=4.11.2",
    "spacy>=3.7.0,<4.0.0",
    "tiktoken>=0.12.0",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-colorama>=0.4.15.20260508",
    "types-markdown>=3.10.2.20260508",
    "types-pillow>=10.2.0.20240822",
    "uvicorn>=0.23.2,<0.24.0",
    "venn>=0.1.3",
    "webdriver-manager>=4.0.2",
    "whatthepatch>=1.0.7",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl" }
auto-gpt-plugin-template = { git = "https://github.com/Significant-Gravitas/Auto-GPT-Plugin-Template", rev = "0.1.0" }
